--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -78,6 +78,12 @@
                                 class="fa fa-instagram"></i></a>
                     </li>
                 {% endif %}
+                {% if general_configuracion.whatsaap %}
+                    <li class="nav-item">
+                        <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.whatsaap }}"><i
+                                class="fa fa-whatsapp"></i></a>
+                    </li>
+                {% endif %}
             </ul>
             {% get_current_language as LANGUAGE_CODE %}
             <form action="{% url 'set_language' %}" method="post">
