Icono de whatsaap

--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -99,8 +99,9 @@
             position: fixed;
             font-size: 3rem;
             cursor: pointer;
-            bottom: 40px;
-            right: 40px;
+            bottom: 150px;
+            right: 5px;
+            z-index: 1900;
         }
 
         .boton_whatsaap a {
