--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -24,7 +24,7 @@
                 <div id="map-container" class="z-depth-1" style="height: 200px">
                 </div>
 
-                <p class="text-center"><i class="fa fa-map-marker"
+                <p class="text-center"><i class="fas fa-map-marker"
                                           aria-hidden="true"></i> {{ general_configuracion.direccion }}</p>
             </div>
             <div class="col-12 col-md-12 col-lg-6 mt-2">
