--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -89,7 +89,7 @@
         <div class="ver_mas">
             <a href="#" class="black-text d-flex flex-row-reverse" data-toggle="modal"
                data-target="#{{ item.id|slugify }}-{{ item.nombre|slugify }}">
-                <h5 class="waves-effect">{% trans 'Ver más' %} <i class="fa fa-chevron-right"></i></h5>
+                <h5 class="waves-effect">{% trans 'Ver más' %} <i class="fas fa-chevron-right"></i></h5>
             </a>
         </div>
 
