--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -9,7 +9,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon right">
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <i class="fas fa-bars" aria-hidden="true"></i>
             </span>
         </button>
 
@@ -50,38 +50,38 @@
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank"
                            href="{{ general_configuracion.facebook }}"><i
-                                class="fa fa-facebook"></i></a>
+                                class="fab fa-facebook-square"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.linkedin %}
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank"
                            href="{{ general_configuracion.linkedin }}"><i
-                                class="fa fa-linkedin"></i></a>
+                                class="fab fa-linkedin"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.twitter %}
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.twitter }}"><i
-                                class="fa fa-twitter"></i></a>
+                                class="fab fa-twitter"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.youtube %}
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.youtube }}"><i
-                                class="fa fa-youtube-play"></i></a>
+                                class="fab fa-youtube"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.instagram %}
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.instagram }}"><i
-                                class="fa fa-instagram"></i></a>
+                                class="fab fa-instagram"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.whatsaap %}
                     <li class="nav-item">
                         <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.whatsaap }}"><i
-                                class="fa fa-whatsapp"></i></a>
+                                class="fab fa-whatsapp"></i></a>
                     </li>
                 {% endif %}
             </ul>
