--- a/templates/web/casos_exito/caso_exito_item_detail.html
+++ b/templates/web/casos_exito/caso_exito_item_detail.html
@@ -46,7 +46,7 @@
         <div class="ver_mas">
             <a href="#" class="black-text d-flex flex-row-reverse" data-toggle="modal"
                data-target="#{{ item.id|slugify }}-{{ item.nombre|slugify }}">
-                <h5 class="waves-effect">{% trans 'Ver más' %} <i class="fa fa-chevron-right"></i></h5>
+                <h5 class="waves-effect">{% trans 'Ver más' %} <i class="fas fa-chevron-right"></i></h5>
             </a>
         </div>
 
@@ -135,7 +135,7 @@
                                     {% for testimonio in testimonios_lista %}
                                         <div class="carousel-item {% if forloop.first %}active{% endif %}">
                                             <div class="testimonial">
-                                                <p><i class="fa fa-quote-left"></i>
+                                                <p><i class="fas fa-quote-left"></i>
                                                     {{ testimonio.testimonio }}
                                                 </p>
                                                 <h4 class="h4-responsive mb-0">{{ testimonio.nombre_persona }}</h4>
