--- a/templates/web/casos_exito/casos_exito_list.html
+++ b/templates/web/casos_exito/casos_exito_list.html
@@ -69,7 +69,7 @@
 
                         <div class="fixed-action-btn d-md-none p-0" style="bottom: 45px; right: 24px">
                             <a class="btn-floating btn-large m-0 color-1-odecopack waves-effect waves-light">
-                                <i class="fa fa-search"></i>
+                                <i class="fas fa-search"></i>
                             </a>
                             <ul class="smooth-scroll" style="width: 1px">
                                 {% for industria in industria_list %}
