--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -48,9 +48,9 @@
 
                             <div class="controls-top d-sm-none">
                                 <a class="btn-floating" href="#carousel-clientes" data-slide="prev"><i
-                                        class="fa fa-chevron-left"></i></a>
+                                        class="fas fa-chevron-left"></i></a>
                                 <a class="btn-floating" href="#carousel-clientes" data-slide="next"><i
-                                        class="fa fa-chevron-right"></i></a>
+                                        class="fas fa-chevron-right"></i></a>
                             </div>
 
                             <ol class="carousel-indicators d-none d-sm-flex">
