- Cambio de iconos

--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -51,7 +51,7 @@
                                            data-toggle="tab"
                                            href="#galeria-{{ galeria.pk }}"
                                            role="tab"><i
-                                                class="fa {{ galeria.icono }} fa-2x"></i><br>{{ galeria.nombre }}</a>
+                                                class="fas {{ galeria.icono }} fa-2x"></i><br>{{ galeria.nombre }}</a>
                                     </li>
                                 {% endfor %}
                             </ul>
