--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -812,7 +812,7 @@
         <link media="screen" href="{% static 'web/sass/mdb.min.css' %}" rel="stylesheet">
         <!-- Your custom styles (optional) -->
         <link media="screen"
-              href="{% static 'web/css/style.min.css' %}?version={{ general_configuracion.version_css_cache }}hola"
+              href="{% static 'web/css/style.min.css' %}?version={{ general_configuracion.version_css_cache }}v2"
               rel="stylesheet">
     </noscript>
     <link rel="icon" href="{% static 'web/img/favicon.ico' %}">
