- Número telefónico en el formulario de contacto

--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -44,6 +44,12 @@
                     </div>
 
                     <div class="md-form form-sm">
+                        <i class="fas fa-tag prefix"></i>
+                        <input name="telefono" type="text" id="form45" class="form-control" required>
+                        <label for="form21">{% trans 'telefono'|title %}</label>
+                    </div>
+
+                    <div class="md-form form-sm">
                         <i class="fas fa-pencil prefix"></i>
                         <textarea name="texto" style="min-height: 150px" rows="40" type="text" id="form8"
                                   class="md-textarea mb-0"
