--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -62,6 +62,13 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="md-form">
+                                        <input type="text" id="subject" name="telefono"
+                                               aria-label="Telefono"
+                                               placeholder="{% trans 'telefono'|title %}">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="md-form">
                                         <input type="text" id="subject" name="asunto"
                                                aria-label="Asunto"
                                                placeholder="{% trans 'asunto'|title %}">
